# k8s-openapi

./: .gitignore  Cargo.toml
.github/workflows/: ci.yaml
ci/: k8s-openapi-derive.sh  k8s-openapi.sh  rustup.sh
k8s-openapi-client/: Cargo.toml
k8s-openapi-client/src/: lib.rs
k8s-openapi-codegen-common/src/: lib.rs
k8s-openapi-codegen-common/src/templates/: watch_event.rs
k8s-openapi-derive-impl/: Cargo.toml
k8s-openapi-derive-impl/src/: lib.rs
k8s-openapi-derive/src/: k8s_openapi_derive_impl.wasm  lib.rs
k8s-openapi-tests/src/: watch_event.rs
src/: lib.rs
src/v1_10/: mod.rs
src/v1_10/api/apps/v1/: replica_set.rs  stateful_set.rs
src/v1_10/api/core/v1/: config_map.rs  namespace.rs  node.rs  persistent_volume_claim.rs  pod.rs
src/v1_10/api/extensions/v1beta1/: daemon_set.rs  deployment.rs  replica_set.rs
src/v1_10/api/policy/v1beta1/: pod_security_policy.rs
src/v1_10/api/rbac/v1/: role.rs  role_binding.rs
src/v1_10/api/rbac/v1alpha1/: role_binding.rs
src/v1_10/api/rbac/v1beta1/: cluster_role.rs  role.rs
src/v1_10/api/storage/v1/: storage_class.rs
src/v1_11/: mod.rs
src/v1_11/api/apps/v1/: controller_revision.rs
src/v1_11/api/apps/v1beta1/: controller_revision.rs  deployment.rs
src/v1_11/api/apps/v1beta2/: scale.rs  stateful_set.rs
src/v1_11/api/authorization/v1beta1/: self_subject_rules_review.rs
src/v1_11/api/autoscaling/v1/: horizontal_pod_autoscaler.rs
src/v1_12/: mod.rs
src/v1_13/: mod.rs
src/v1_14/: mod.rs
src/v1_16/: mod.rs
src/v1_17/: mod.rs
src/v1_8/: mod.rs
src/v1_9/: mod.rs
(+257 files in other folders)
