[package]
name = "k8s-openapi-client"
version = "0.7.0-beta.1"
license = "Apache-2.0"
authors = ["Arnavion <me@arnavion.dev>"]
categories = ["web-programming::http-client"]
description = "A client for the Kubernetes API"
documentation = "https://arnavion.github.io/k8s-openapi/v0.7.x/k8s_openapi_client/"
edition = "2018"
keywords = ["client", "kubernetes", "k8s", "http"]
readme = "README.md"
repository = "https://github.com/Arnavion/k8s-openapi"
include = [
	"Cargo.toml",
	"LICENSE",
	"README.md",
	"src/**/*",
]

[dependencies]
k8s-openapi = { version = "0.7", path = ".." }
reqwest = { version = "0.10", optional = true }

[features]
reqwest-blocking = ["reqwest", "reqwest/blocking"]
